--- a/packages/biome-config/biome.json
+++ b/packages/biome-config/biome.json
@@ -75,6 +75,12 @@
                 "rules": {
                     "suspicious": {
                         "noExplicitAny": "off"
+                    },
+                    "style": {
+                        "noNonNullAssertion": "off"
+                    },
+                    "a11y": {
+                        "useButtonType": "off"
                     }
                 }
             }
@@ -85,6 +91,16 @@
                 "rules": {
                     "suspicious": {
                         "noConsoleLog": "off"
+                    }
+                }
+            }
+        },
+        {
+            "include": ["**/github-workflow/**"],
+            "linter": {
+                "rules": {
+                    "suspicious": {
+                        "noAssignInExpressions": "off"
                     }
                 }
             }
