fix(ci): correct planning-cleanup workflow YAML and health-check counts
- Fix multi-line commit message in planning-cleanup.yml
- Update health-check.sh expected counts:
  * Agents: 13 → 15
  * Commands: 16 → 23
  * Skills: 16 → 19
  * Workflows: 9 → 10
- Fix code registry JSON parsing to use 'plannings' field

--- a/.github/workflows/planning-cleanup.yml
+++ b/.github/workflows/planning-cleanup.yml
@@ -88,14 +88,11 @@ jobs:
           git add .claude/sessions/planning/P-*
 
           # Create commit
-          git commit -m "chore(planning): archive completed planning sessions
-
-Automated cleanup by planning-cleanup workflow
-
-- Moved completed sessions to archived/YYYY/MM/
-- Generated COMPLETION-REPORT.md for each session
-
-Workflow run: ${{ github.run_id }}"
+          git commit -m "chore(planning): archive completed planning sessions" \
+                     -m "Automated cleanup by planning-cleanup workflow" \
+                     -m "- Moved completed sessions to archived/YYYY/MM/" \
+                     -m "- Generated COMPLETION-REPORT.md for each session" \
+                     -m "Workflow run: ${{ github.run_id }}"
 
       - name: Push changes
         if: steps.check_changes.outputs.changes == 'true' && inputs.dry_run != true
