fix(ci): build only packages, not apps, before typecheck
Apps (api, web, admin) require env vars to build but not for typecheck

- Changed from 'pnpm build' to 'pnpm build --filter="./packages/*"'

- Only builds library packages that export types (.d.ts files)

- Apps can typecheck without being built (only need dependency types)

- Avoids needing env vars for apps in CI typecheck step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build packages
-        run: pnpm build
+      - name: Build packages only (not apps)
+        run: pnpm build --filter='./packages/*'
 
       - name: Type check
         run: pnpm typecheck
