--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,24 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
+    env:
+      # Database
+      HOSPEDA_DATABASE_URL: ${{ secrets.HOSPEDA_DATABASE_URL }}
+
+      # Clerk Authentication (Server-side)
+      HOSPEDA_CLERK_SECRET_KEY: ${{ secrets.HOSPEDA_CLERK_SECRET_KEY }}
+      CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
+
+      # Clerk Authentication (Client-side - Public)
+      HOSPEDA_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.HOSPEDA_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+
+      # Application URLs
+      HOSPEDA_API_URL: ${{ secrets.HOSPEDA_API_URL }}
+      HOSPEDA_SITE_URL: ${{ secrets.HOSPEDA_SITE_URL }}
+
+      # Optional: Clerk Webhooks
+      HOSPEDA_CLERK_WEBHOOK_SECRET: ${{ secrets.HOSPEDA_CLERK_WEBHOOK_SECRET }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -42,8 +60,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build packages only (not apps)
-        run: pnpm build --filter='./packages/*'
+      - name: Build all packages and apps
+        run: pnpm build
 
       - name: Type check
         run: pnpm typecheck
