--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,10 @@ jobs:
       # Optional: Clerk Webhooks
       HOSPEDA_CLERK_WEBHOOK_SECRET: ${{ secrets.HOSPEDA_CLERK_WEBHOOK_SECRET }}
 
+      # Admin app (Vite format) - Reutiliza los mismos secrets
+      VITE_API_URL: ${{ secrets.HOSPEDA_API_URL }}
+      VITE_CLERK_PUBLISHABLE_KEY: ${{ secrets.HOSPEDA_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
