--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
 
       # Clerk Authentication (Server-side)
       HOSPEDA_CLERK_SECRET_KEY: ${{ secrets.HOSPEDA_CLERK_SECRET_KEY }}
-      CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
+      CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY || secrets.HOSPEDA_CLERK_SECRET_KEY }}
 
       # Clerk Authentication (Client-side - Public)
       HOSPEDA_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.HOSPEDA_PUBLIC_CLERK_PUBLISHABLE_KEY }}
