--- a/turbo.json
+++ b/turbo.json
@@ -2,6 +2,22 @@
     "$schema": "https://turborepo.com/schema.json",
     "ui": "tui",
     "globalDependencies": ["**/.env.*local"],
+    "globalEnv": [
+        "NODE_ENV",
+        "CI",
+        "HOSPEDA_DATABASE_URL",
+        "HOSPEDA_CLERK_SECRET_KEY",
+        "CLERK_SECRET_KEY",
+        "HOSPEDA_PUBLIC_CLERK_PUBLISHABLE_KEY",
+        "HOSPEDA_API_URL",
+        "HOSPEDA_SITE_URL",
+        "HOSPEDA_CLERK_WEBHOOK_SECRET",
+        "VITE_API_URL",
+        "VITE_CLERK_PUBLISHABLE_KEY",
+        "PUBLIC_API_URL",
+        "PUBLIC_SITE_URL",
+        "PUBLIC_CLERK_PUBLISHABLE_KEY"
+    ],
     "tasks": {
         "build": {
             "dependsOn": ["^build"],
