--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -48,6 +48,7 @@
         "@types/bcrypt": "^5.0.2",
         "@types/node": "^22.15.3",
         "@types/pg": "^8.15.1",
+        "@vitest/coverage-v8": "^3.1.3",
         "@vitest/ui": "^3.1.4",
         "c8": "^10.1.3",
         "dotenv": "^16.4.5",
