feat(ai-image): create package with Replicate/Sharp setup [PF-005-1,2,3]
- Install and configure Replicate SDK ^0.25.0 with TypeScript support
- Install and configure Sharp ^0.32.0 for image processing
- Create environment variable configuration with Zod validation
- Add REPLICATE_API_TOKEN (required) and REPLICATE_MODEL (optional) to .env.example
- Implement comprehensive tests (18 tests, 93.54% coverage)
- Verify SDK imports and basic functionality work correctly

Tasks completed:
- PF-005-1: Install and configure Replicate SDK
- PF-005-2: Install and configure Sharp for image processing
- PF-005-3: Create environment variable configuration

--- a/.env.example
+++ b/.env.example
@@ -191,6 +191,12 @@ TODO_LINEAR_DEFAULT_USER_EMAIL=your-email@example.com  # 🟡 OPTIONAL - Default
 TODO_LINEAR_DEFAULT_USER_NAME=your-name                # 🟡 OPTIONAL - Default user name
 
 # =============================================================================
+# 🤖 AI IMAGE GENERATION (Replicate API)
+# =============================================================================
+REPLICATE_API_TOKEN=r8_your_api_token_here            # 🔴 REQUIRED - Replicate API token for AI image generation
+REPLICATE_MODEL=black-forest-labs/flux-schnell        # 🟡 OPTIONAL - Replicate model (default: flux-schnell)
+
+# =============================================================================
 # 🧪 TESTING CONFIGURATION
 # =============================================================================
 TESTING_RATE_LIMIT=false                               # 🟡 OPTIONAL - Enable rate limiting in tests
