--- a/packages/ai-image-generation/package.json
+++ b/packages/ai-image-generation/package.json
@@ -16,7 +16,9 @@
             "types": "./src/config/index.ts"
         }
     },
-    "files": ["dist"],
+    "files": [
+        "dist"
+    ],
     "scripts": {
         "build": "tsup",
         "dev": "echo 'Dev mode uses tsconfig paths (no build)'",
@@ -40,6 +42,7 @@
         "@types/node": "^22.15.3",
         "@vitest/coverage-v8": "^3.1.3",
         "@vitest/ui": "^3.1.4",
+        "dotenv": "^17.2.3",
         "tsup": "^8.4.0",
         "tsx": "^4.19.4",
         "typescript": "^5.8.3",
