--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     },
     "lint-staged": {
         "*.{ts,tsx}": ["biome check --write --no-errors-on-unmatched"],
-        "*.{json,md}": ["biome format --write"]
+        "*.json": ["biome format --write"],
+        "*.md": ["markdownlint-cli2 --config .markdownlint.json --fix"]
     }
 }
